--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
