--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
+    "rc-pagination": "^4.0.3",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
